--- a/.github/workflows/clojure.yml
+++ b/.github/workflows/clojure.yml
@@ -2,9 +2,9 @@ name: Clojure CI
 
 on:
   push:
-    branches: [ "main" ]
+    branches: [ "master" ]
   pull_request:
-    branches: [ "main" ]
+    branches: [ "master" ]
 
 jobs:
   build:
