--- a/.github/workflows/clojure.yml
+++ b/.github/workflows/clojure.yml
@@ -15,5 +15,5 @@ jobs:
     - uses: actions/checkout@v3
     - name: Install dependencies
       run: lein deps
-    - name: Run tests
-      run: lein test
+    - name: Run tests (examples only)
+      run: lein test :only-examples
